Cleaning DefaultLoader